# hotdrink-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
examples/hotdrink-wasm-multi-threaded/: Cargo.toml  README.md  makefile
examples/hotdrink-wasm-multi-threaded/.cargo/: config.toml
examples/hotdrink-wasm-multi-threaded/src/: lib.rs
examples/hotdrink-wasm-multi-threaded/src/examples/: bench_cs.rs  counter.rs  example.rs  flight_booker.rs  jscs_number.rs  jscs_string.rs  mod.rs  parallel.rs  priority_adjust.rs  responsive.rs  sum.rs  temperature_converter.rs  text_search.rs
examples/hotdrink-wasm-multi-threaded/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
examples/hotdrink-wasm-simple/: Cargo.toml  README.md  makefile  package-lock.json  webpack.config.js
examples/hotdrink-wasm-simple/examples/: dot.rs
examples/hotdrink-wasm-simple/js/: image_resize.js  image_scaling.js  signup.js  turbines.js
examples/hotdrink-wasm-simple/src/: image_resize.rs  image_scaling.rs  lib.rs  signup.rs  turbines.rs
examples/hotdrink-wasm-simple/src/examples/: image_resize.rs  mod.rs
examples/hotdrink-wasm-simple/static/: image_resize.html  image_scaling.html  index.html  signup.html  turbines.html
examples/hotdrink-wasm-simple/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
hotdrink-rs/: Cargo.toml  README.md  README.tpl  makefile
hotdrink-rs-example/: Cargo.toml
hotdrink-rs-example/src/: main.rs
hotdrink-rs/benches/: bench_hierarchical_planner.rs  bench_simple_planner.rs  constraint_system.rs  criterion.rs  hierarchical_planner.rs  simple_planner.rs
hotdrink-rs/examples/: constraint_system_update.rs  deferred_scheduling.rs  dot.rs  dots.rs  hierarchical_planner.rs  max_benchmarks.rs  misc.rs  parents_children.rs  rayon.rs  rectangle.rs  run_hierarchical_planner.rs  run_simple_planner.rs  run_solve.rs  run_update.rs  scheduling.rs  simple_planner.rs  sum.rs
hotdrink-rs/src/: event.rs  lib.rs
hotdrink-rs/src/algorithms/: fib.rs  hierarchical_planner.rs  mod.rs  priority_adjuster.rs  pruner.rs  simple_planner.rs  solver.rs  toposorter.rs
hotdrink-rs/src/algorithms/experimental_planners/: component.rs  mod.rs  new_planners.rs
hotdrink-rs/src/builders/: component_builder.rs  component_macro.rs  constraint_builder.rs  constraint_macro.rs  dyn_fn.rs  method_builder.rs  method_macro.rs  mod.rs  sum_type.rs  value_experiments.rs
hotdrink-rs/src/data/: callback.rs  component.rs  constraint.rs  constraint_system.rs  errors.rs  filtered_callback.rs  generation_id.rs  generations.rs  method.rs  mod.rs  solve_error.rs  traits.rs  variable_activation.rs  variable_information.rs
hotdrink-rs/src/examples/: mod.rs
hotdrink-rs/src/examples/components/: factory.rs  ladder.rs  linear.rs  mod.rs  numbers.rs  priority_adjust.rs  random.rs  unprunable.rs
hotdrink-rs/src/examples/constraint_systems/: dense.rs  empty.rs  factory.rs  ladder.rs  linear.rs  mod.rs  sparse.rs  tree.rs
hotdrink-rs/src/executor/: dummy_executor.rs  method_executor.rs  mod.rs  rayon_executor.rs
hotdrink-rs/src/macros/: component_macro.rs  component_type.rs  dummy_component.rs  mod.rs  raw_component.rs  raw_constraint.rs  raw_method.rs  value_macro.rs
hotdrink-rs/src/model/: activation.rs  component.rs  constraint.rs  constraint_system.rs  constraint_system_builder.rs  errors.rs  filtered_callback.rs  generation_id.rs  method.rs  mod.rs  solve_error.rs  spec.rs  undo.rs  undo_vec.rs  variable.rs  variable_activation.rs  variables.rs
hotdrink-rs/src/planner/: hierarchical.rs  mod.rs  plan_trait.rs  priority_adjuster.rs  pruner.rs  simple.rs  spec.rs  toposorter.rs
hotdrink-rs/src/planner/experimental/: constraint_graph.rs  mod.rs
hotdrink-rs/src/scheduler/: mod.rs  scheduler.rs
hotdrink-rs/src/solver/: mod.rs  par_solver.rs  solve_error.rs  solver.rs
hotdrink-rs/src/thread/: dummy_pool.rs  mod.rs  thread_pool.rs
hotdrink-rs/src/util/: fib.rs  mod.rs
hotdrink-rs/src/variable_ranking/: linked_list_ranker.rs  mod.rs  sort_ranker.rs  variable_ranker.rs
hotdrink-rs/tests/: component_tests.rs  constraint_system_tests.rs  constraint_system_update.rs
hotdrink-wasm/: Cargo.toml  LICENSE_MIT  README.md  makefile
hotdrink-wasm/.cargo/: config.toml
hotdrink-wasm/src/: lib.rs  utils.rs
hotdrink-wasm/src/demo/: mod.rs  parallel.rs  web_worker_bench.rs
hotdrink-wasm/src/event/: event_handler.rs  event_listener.rs  js_event.rs  mod.rs
hotdrink-wasm/src/examples/: bench_cs.rs  circle.rs  counter.rs  example.rs  flight_booker.rs  image_resize.rs  image_scaling.rs  jscs_number.rs  jscs_string.rs  mod.rs  priority_adjust.rs  search.rs  temperature_converter.rs
hotdrink-wasm/src/macros/: component_type_wrapper.rs  constraint_system_wrapper.rs  constraint_system_wrapper_threaded.rs  gen_js_constraint_system.rs  gen_js_val.rs  mod.rs  wrap_enum.rs
hotdrink-wasm/src/thread/: mod.rs
hotdrink-wasm/src/thread/pool/: dynamic_pool.rs  mod.rs  pool_worker.rs  static_pool.rs  web_worker_pool.rs  worker_pool.rs
hotdrink-wasm/src/thread/worker/: generic_worker.js  generic_worker.rs  mod.rs  script_path.js  worker_script.rs
hotdrink-wasm/src/util/: mod.rs  timer.rs
hotdrink-wasm/tests/: benchmarks.rs  constraint_system_update.rs
hotdrink-wasm/www/: README.md  generic_worker.js  index.html  index.js  makefile  node_example.js  package-lock.json  package.json  webpack.config.js
hotdrink-wasm/www/examples/bench_web_worker_init/: index.html  index.js
hotdrink-wasm/www/examples/counter/: index.html
hotdrink-wasm/www/examples/errors/: index.html  index.js
hotdrink-wasm/www/examples/example1/: index.html  index.js
hotdrink-wasm/www/examples/example2/: index.html  index.js
hotdrink-wasm/www/examples/flight_booker/: index.html  index.js
hotdrink-wasm/www/examples/image_resize/: index.html  index.js
hotdrink-wasm/www/examples/image_scaling/: index.html  index.js
hotdrink-wasm/www/examples/priority_adjust/: index.html  index.js
hotdrink-wasm/www/examples/temperature_converter/: index.html  index.js
(+74 files in other folders)
