[workspace]
members = [
    "hotdrink-rs",
    "hotdrink-wasm",
    "examples/hotdrink-rs-iced",
    "examples/hotdrink-wasm-simple",
    "examples/hotdrink-wasm-multi-threaded",
    "examples/hotdrink-wasm-node",
]

[profile.release.package.hotdrink-rs]
# Debug information for flamegraph
debug = true

[profile.release.package.hotdrink-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
