[workspace]
members = [
    "hotdrink-rs",
    "hotdrink-wasm",
    "hotdrink-c",
]
exclude = [
    "examples"
]

[profile.release.package.hotdrink-rs]
# Debug information for flamegraph
debug = true

[profile.release.package.hotdrink-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
