[package]
name = "hotdrink-rs-example"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"
repository = "https://github.com/HotDrink/hotdrink-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.2"
hotdrink-rs = { path = "../hotdrink-rs" }
futures = "0.3.13"