[package]
name = "hotdrink-rs"
version = "0.3.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"
description = "An implementation of HotDrink in Rust."
license = "MIT"
keywords = [ "algorithms", "data-structures", "constraint-systems" ]
repository = "https://github.com/HotDrink/hotdrink-rs"

[dependencies]

# Logging
log = "0.4.11"
wasm-logger = "0.2.0"
env_logger = "0.8.2"

itertools = "0.10.0"
futures = "0.3.7"
rayon = "1.5.0"

bitvec = "0.21.0"

[dev-dependencies]
criterion = { version = "0.3.4", features = [ "html_reports" ] }
pretty_assertions = "0.6.1"
rand = "0.8.3"

[[bench]]
name = "constraint_system"
harness = false