[package]
name = "hotdrink-rs"
version = "0.1.3"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"
description = "An implementation of HotDrink in Rust."
license = "MIT OR Apache-2.0"
keywords = [ "algorithms", "data-structures", "constraint-systems" ]
repository = "https://github.com/HotDrink/hotdrink-rs"

[dependencies]

log = "0.4.11"
itertools = "0.10.0"
futures = "0.3.7"
getrandom = { version = "0.2.2", features = ["js"] }
derivative = "2.2.0"

[dev-dependencies]
criterion = { version = "0.3.4", features = [ "html_reports" ] }
pretty_assertions = "0.7.1"
rand = "0.8.3"
rayon = "1.5.0"
env_logger = "0.8.3"

[[bench]]
name = "criterion"
harness = false