[package]
name = "hotdrink-wasm"
version = "0.1.2"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"
description = "WebAssembly bindings for hotdrink-rs."
license = "MIT OR Apache-2.0"
keywords = [ "wasm", "web-programming", "gui", "algorithms", "data-structures" ]
repository = "https://github.com/HotDrink/hotdrink-rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# Enable console_error_panic_hook (and wee_alloc if I can make it work again)
[features]
default = [ "console_error_panic_hook" ]
thread = []

[dependencies]

hotdrink-rs = "0.1.1"

# Logging
log = "0.4.11"

# Misc
itertools = "0.10.0"

# Wasm
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.18"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

js-sys = "0.3.49"

[dependencies.web-sys]
version = "0.3.47"
features = [
    "console",
    "Worker",
    "WorkerOptions",
    "DedicatedWorkerGlobalScope",
    "Blob",
    "Url",
    "ErrorEvent",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Performance",
    "PerformanceTiming",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
pretty_assertions = "0.6.1"