[package]
name = "hotdrink-wasm-multi-threaded"
version = "0.1.0"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

log = "0.4.14"
wasm-logger = "0.2.0"
hotdrink-rs = "0.1.1"
hotdrink-wasm = { version = "0.1.1", features = [ "thread" ] }
js-sys = "0.3.50"

wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"