# You must change these to your own details.
[package]
name = "hotdrink-wasm-simple"
description = "A simple example of how to use `hotdrink-wasm` based on `rust-webpack-template`."
version = "0.1.0"
authors = ["rudsvar@gmail.com"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["console_error_panic_hook"]

[dependencies]

log = "0.4.14"
wasm-logger = "0.2.0"
hotdrink-rs = "=0.1.1"
hotdrink-wasm = { version = "=0.1.1" }
js-sys = "0.3.50"

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.45"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.23"
futures = "0.3.14"
wasm-bindgen-futures = "0.4.23"
